--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-  <script src='../lib/library.js'></script>
+  <script src='../lib/PureTools.js'></script>
   <script>
-  library.log(); // 控制台输出 helloworld
+    console.log(PureTools);
   </script>
 </body>
 
