--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <script src='../lib/PureTools.js'></script>
+  <script src='../lib/index.js'></script>
   <script>
     console.log(PureTools);
   </script>
